[gd_scene load_steps=7 format=3 uid="uid://7mvxuaulctcq"]

[ext_resource type="Script" uid="uid://buepm260xnmaa" path="res://addons/dialogic/Editor/Events/Fields/field_file.gd" id="1_0grcf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tr837"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6b7on"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wq6bt"]

[sub_resource type="SVGTexture" id="SVGTexture_ye6ml"]
_source = "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"16\" height=\"16\"><path fill=\"#ff5d5d\" d=\"M2 1v8.586l1.293-1.293a1 1 0 0 1 1.414 0L7 10.587l2.293-2.293a1 1 0 0 1 1.414 0L13 10.586l1-1V6H9V1H2zm8 0v4h4zm-6 9.414-2 2V15h12v-2.586l-.293.293a1 1 0 0 1-1.414 0L10 10.414l-2.293 2.293a1 1 0 0 1-1.414 0L4 10.414z\"/></svg>
"

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p7oji"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(1, 0.365, 0.365, 1)
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_detail = 1

[node name="Field_File" type="MarginContainer"]
offset_right = 314.0
offset_bottom = 40.0
theme_type_variation = &"DialogicEventEdit"
script = ExtResource("1_0grcf")

[node name="BG" type="PanelContainer" parent="."]
layout_mode = 2
theme_type_variation = &"DialogicEventEdit"

[node name="HBox" type="HBoxContainer" parent="BG"]
layout_mode = 2
alignment = 2

[node name="Icon" type="TextureRect" parent="BG/HBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
mouse_filter = 2

[node name="Field" type="LineEdit" parent="BG/HBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
theme_override_styles/normal = SubResource("StyleBoxEmpty_tr837")
theme_override_styles/read_only = SubResource("StyleBoxEmpty_6b7on")
theme_override_styles/focus = SubResource("StyleBoxEmpty_wq6bt")
expand_to_text_length = true

[node name="OpenButton" type="Button" parent="BG/HBox"]
unique_name_in_owner = true
layout_mode = 2
icon = SubResource("SVGTexture_ye6ml")
flat = true

[node name="EditButton" type="Button" parent="BG/HBox"]
unique_name_in_owner = true
layout_mode = 2
icon = SubResource("SVGTexture_ye6ml")
flat = true

[node name="ClearButton" type="Button" parent="BG/HBox"]
unique_name_in_owner = true
layout_mode = 2
icon = SubResource("SVGTexture_ye6ml")
flat = true

[node name="FocusStyle" type="Panel" parent="."]
visible = false
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_p7oji")

[connection signal="focus_entered" from="BG/HBox/Field" to="." method="_on_field_focus_entered"]
[connection signal="focus_exited" from="BG/HBox/Field" to="." method="_on_field_focus_exited"]
[connection signal="text_submitted" from="BG/HBox/Field" to="." method="_on_file_dialog_selected"]
